pageZoom/setPageZoom: should not be in a Mac-only part of WKWebView.mm https://bugs.webkit.org/show_bug.cgi?id=204128

Reviewed by Alex Christensen.

Source/WebKit:

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView setPageZoom:]):
(-[WKWebView pageZoom]):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/PageZoom.mm: Added.
(TestWebKitAPI::getClientWidth):
* TestWebKitAPI/cocoa/TestWKWebView.h:
* TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[WKWebView waitUntilClientWidthIs:]):


Canonical link: https://commits.webkit.org/217498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252458 268f45cc-cd09-0410-ab3c-d52691b4dbfc